--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
             </button>
         </div>
         <dialog class="dialog" id="dialog-id">
+            <div class="center">
             <div class="dialog__flex">
                 <svg class="floppy-dialog" viewbox="0 0 39 39">
                     <use href="./svg/floppy.svg#floppy" />
@@ -313,6 +314,7 @@
             <button type="button" class="button-save" onclick="window['dialog-id'].close()">
                 <span class="button-save-text">ок</span>
             </button>
+            </div>
         </dialog>
     </main>
     <script src="./scripts/like.js"></script>
